@@ -1,8 +1,8 @@
-This is OpenDDS version 2.3, released Fri Feb 18 22:43:48 UTC 2011.
+This is OpenDDS version 2.4, released Mon Jul 25 20:36:28 UTC 2011.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.3
+    OpenDDS VERSION: 2.4
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
