@@ -1,3 +1,7 @@
+Mon Jul 25 20:36:28 UTC 2011  Iliyan Jeliazkov  <iliyan@ociweb.com>
+
+        * OpenDDS version 2.4 released.
+
 Mon Jul 25 20:25:55 UTC 2011  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
